--- a/explore.html
+++ b/explore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Home</title>
+<title>Explore</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="/layout.css">
 <script src=""></script>
@@ -9,13 +9,13 @@
 <body>
 
     <ul>
-        <li><a class="active" href="javascript:void(0)">Home</a></li>
-        <li><a href="/explore.html">Explore</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a class="active" href="javascript:void(0)">Explore</a></li>
         <li><a href="/reviews.html">Write Review</a></li>
         <li style="float:right"><a href="/profile.html">Profile</a></li>
     </ul>
   
-    <h1>Home</h1>
+    <h1>Explore</h1>
 
 </body>
 </html>
