--- a/profile.html
+++ b/profile.html
@@ -9,10 +9,10 @@
 <body>
 
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#explore">Explore</a></li>
-        <li><a href="#reviews">Write Reviews</a></li>
-        <li style="float:right"><a class="active" href="#profile">Profile</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/explore.html">Explore</a></li>
+        <li><a href="/reviews.html">Write Review</a></li>
+        <li style="float:right"><a class="active" href="javascript:void(0)">Profile</a></li>
     </ul>
   
   <section class="split-section">
