--- a/reviews.html
+++ b/reviews.html
@@ -10,10 +10,10 @@
 <body>
 
     <ul>
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#explore">Explore</a></li>
-        <li><a href="#reviews">Write Reviews</a></li>
-        <li style="float:right"><a href="#profile">Profile</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/explore.html">Explore</a></li>
+        <li><a class="active" href="javascript:void(0)">Write Review</a></li>
+        <li style="float:right"><a href="/profile.html">Profile</a></li>
     </ul>
   
     <h1>Write a Review</h1>
