Created Explore page structure
*Added rectangles to represent media images

--- a/explore.html
+++ b/explore.html
@@ -16,9 +16,34 @@
     </ul>
   
     <h1>Explore</h1>
-    
-    <h2>Films</h2>
-    <h2>Books</h2>
+
+    <h2 style="margin-left:15px;">Films</h2>
+    <div class="exploreList" id="filmList">
+        <div class="media" style="margin-left:15px;"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+    </div>
+
+    <h2 style="margin-left:15px;">Books</h2>
+    <div class="exploreList" id="bookList">
+        <div class="media" style="margin-left:15px;"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+    </div>
 
 </body>
 </html>
