Added inital Films and Books buttons
*Added buttons for films and books in the same style as the rest of the website
*Added a cursor effect to both buttons

--- a/explore.html
+++ b/explore.html
@@ -17,6 +17,11 @@
   
     <h1>Explore</h1>
 
+    <div class="btn-group">
+        <button class="button" style="margin-left:15px;">Films</button>
+        <button class="button">Books</button>
+    </div>
+
     <h2 style="margin-left:15px;">Films</h2>
     <div class="exploreList" id="filmList">
         <div class="media" style="margin-left:15px;"></div>
