Sign Up and Login Dynamic Backgrounds
*Added sunrise color background to the Sign Up page
*Added sunset color background to the Login page
*Added website description to the Home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
         <li style="float:right"><a href="/profile.html">Profile</a></li>
     </ul>
   
-    <h1>Home</h1>
+    <h1>Review Website</h1>
+
+    <p>Review Website is a versatile platform for users to share reviews and discover new movies and books. Whether you are an avid book reader or a cinema connoisseur, our features include personalized recommendations, thorough review tracking, and a wide selection of books and movies. Explore new content, share your thoughts, and join our Review Website community.</p>
+    <p>DISCOVER new books and movies</p>
+    <p>SHARE your thoughts by writing reviews</p>
+    <p>ENJOY great stories</p>
+
+    <hr>
+
+    <h2>For You</h2>
+    <br> 
+    <h2>Staff Picks</h2>
 
 </body>
 </html>
