--- a/login.html
+++ b/login.html
@@ -7,7 +7,8 @@
 <script src=""></script>
 
 <body>
-
+    <div class="stars"></div>
+    <div class="twinkling"></div>
         <section class="split-section">
             <div class="half left">
                 <div class="content">
@@ -28,7 +29,7 @@
             
                                 <button type="submit" style="margin-top:20px; width: 100%;">Login</button>
 
-                                <h5 style="text-align:center;">New user? <a href="/signup.html">Sign Up</a></h5>
+                                <h5 style="text-align:center;">New user? <a href="/signup.html" style="color:#f8f8f8;">Sign Up</a></h5>
                             </div>
                         </div>
                     </form>
