--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <title>Review Website - Sign Up</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="/login.css">
+<link rel="stylesheet" href="/signup.css">
 <script src=""></script>
 
 <body>
@@ -33,7 +33,7 @@
     
                             <button type="submit" style="margin-top:20px; width: 100%;">Sign Up</button>
     
-                            <h5 style="text-align:center;">Already have an account? <a href="/login.html">Login</a></h5>
+                            <h5 style="text-align:center;">Already have an account? <a href="/login.html" style="color:#333333;">Login</a></h5>
                         </div>
                     </div>
                 </form>
