Adds Home page images
*Adds two images to represent the films and books features of the website
*Adds filler rectangles for future recommendation features on the Home page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <li style="float:right"><a href="/profile.html">Profile</a></li>
     </ul>
   
+    <div class="row" style="background:no-repeat top center fixed;">
+        <a href="https://unsplash.com/es/s/fotos/book" target="_blank"><img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Ym9va3xlbnwwfHwwfHx8MA%3D%3D" class="column" style="width:49vw;height:auto;filter:brightness(55%);"></a>
+        <a href="https://www.wallpaperflare.com/search?wallpaper=cinematography" target="_blank"><img src="https://c0.wallpaperflare.com/preview/57/497/73/movie-reel-projector-film.jpg" class="column" style="width:49vw;height:auto;filter:brightness(55%);"></a>
+    </div>
+
     <h1>Review Website</h1>
 
     <p>Review Website is a versatile platform for users to share reviews and discover new movies and books. Whether you are an avid book reader or a cinema connoisseur, our features include personalized recommendations, thorough review tracking, and a wide selection of books and movies. Explore new content, share your thoughts, and join our Review Website community.</p>
@@ -25,8 +30,24 @@
     <hr>
 
     <h2>For You</h2>
-    <br> 
+    <div class="homeList">
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+    </div>
+
     <h2>Staff Picks</h2>
+    <div class="homeList">
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+        <div class="media"></div>
+    </div>
 
 </body>
 </html>
