Creates spacing in between elements on Home page
*Added an equal amount of spacing between each media element on the Home page
*Added extra media element in each section on the Home page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
         <div class="media"></div>
         <div class="media"></div>
         <div class="media"></div>
+        <div class="media"></div>
     </div>
 
     <h2>Staff Picks</h2>
     <div class="homeList">
+        <div class="media"></div>
         <div class="media"></div>
         <div class="media"></div>
         <div class="media"></div>
