Adds data format for the Profile page
*Added the section to display the number of movies watched by the users
*Added the section to display the amount of time spent watching movies by the users
*Added the section to display the number of books read by the users
*Added the section to display the number of pages read by the users

--- a/profile.html
+++ b/profile.html
@@ -24,8 +24,18 @@
         </div>
         <div class="half right">
           <div class="content">
-            <h2>Activity</h2>
-          </div>
+              <h2>Movies Watched</h2>
+              <h1>##</h1>
+
+              <h2>Total Hours</h2>
+              <h1>###</h1>
+            </div>
+              <h2>Books Read</h2>
+              <h1>##</h1>
+
+              <h2>Total Pages</h2>
+              <h1>###</h1>
+            </div>
         </div>
     </section>
 
