Connects TMDb database and adds images
*Connected the TMDb movie database to the website
*Added images of the top 60 movies to the website Explore page

--- a/explore.html
+++ b/explore.html
@@ -44,6 +44,8 @@
         </div>
     </div>
 
+    <div id="movie-list"></div>
+
     <div id="bookSection" style="display:none;">
         <h2 style="margin-left:15px;">Books</h2>
         <div class="exploreList">
@@ -59,6 +61,8 @@
             <div class="media"></div>
         </div>
     </div>
+
+    <script src="app.js"></script>
 
     <script>
         let films = document.getElementById("filmSection");
