Connect Open Library API and adds book images
*Connected the Open Library API database to the website
*Added images of the top 60 books to the website Explore page

--- a/explore.html
+++ b/explore.html
@@ -29,37 +29,11 @@
     </div>
 
     <div id="filmSection" style="display:block;">
-        <h2 style="margin-left:15px;">Films</h2>
-        <div class="exploreList">
-            <div class="media" style="margin-left:15px;"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-        </div>
+        <div id="movie-list"></div>
     </div>
 
-    <div id="movie-list"></div>
-
     <div id="bookSection" style="display:none;">
-        <h2 style="margin-left:15px;">Books</h2>
-        <div class="exploreList">
-            <div class="media" style="margin-left:15px;"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-            <div class="media"></div>
-        </div>
+        <div id="book-list"></div>
     </div>
 
     <script src="app.js"></script>
