--- a/index.html
+++ b/index.html
@@ -48,13 +48,27 @@
     <div class="carousel-container">
         <button class="carousel-arrow left">&#9664;</button>
         <div class="homeList">
-            <div class="media">A</div>
-            <div class="media">B</div>
-            <div class="media">C</div>
-            <div class="media">D</div>
-            <div class="media">E</div>
-            <div class="media">F</div>
-            <div class="media">G</div>
+            <div class="media">
+                <img src="https://covers.openlibrary.org/b/id/8257933-M.jpg" alt="Romeo and Juliet">
+            </div>
+            <div class="media">
+                <img src="https://covers.openlibrary.org/b/id/14653269-M.jpg" alt="Hamlet">
+            </div>
+            <div class="media">
+                <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/nrmXQ0zcZUL8jFLrakWc90IR8z9.jpg" alt="Shutter Island">
+            </div>
+            <div class="media">
+                <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/uDO8zWDhfWwoFdKS4fzkUJt0Rf0.jpg" alt="La La Land">
+            </div>
+            <div class="media">
+                <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/iR1bVfURbN7r1C46WHFbwCkVve.jpg" alt="About Time">
+            </div>
+            <div class="media">
+                <img src="https://covers.openlibrary.org/b/id/13900709-M.jpg" alt="Jane Eyre">
+            </div>
+            <div class="media">
+                <img src="https://covers.openlibrary.org/b/id/12752033-M.jpg" alt="The Picture of Dorian Gray">
+            </div>
         </div>
         <button class="carousel-arrow right">&#9654;</button>
     </div>
