Adds default color behind book images
*Added default red color to fill potential blank space behind smaller cover images
*Added border between Movies and Books options
*Added border between Filter and Sort options

--- a/explore.html
+++ b/explore.html
@@ -20,11 +20,11 @@
     <div class="btn-container">
         <div class="btn-group">
             <button class="button active" id="filmsButton" onclick="showSection('films')">Films</button>
-            <button class="button inactive" id="booksButton" onclick="showSection('books')">Books</button>
+            <button class="button inactive" id="booksButton" onclick="showSection('books')" style="border-left:1px solid #bbb;">Books</button>
         </div>
         <div class="btn-group">
             <button class="button inactive">Filter</button>
-            <button class="button inactive">Sort</button>
+            <button class="button inactive" style="border-left:1px solid #bbb;">Sort</button>
         </div>
     </div>
 
