--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             <div class="half left">
                 <div class="content">
                     <h1>Review Website</h1>
-                    <div class="icon"></div>
+                    <img src="websiteLogo.png" alt="Review Website Logo" class="logo-image">
                 </div>
             </div>
             <div class="half right">
@@ -21,11 +21,11 @@
                     <form style="display:table;margin:0 auto;height:100vh;">
                         <div style="display:table-cell;vertical-align:middle;">
                             <div class="container" style="display: flex; flex-direction: column; gap: 10px; width: 300px;">
-                                <label for="uname"><b>Email</b></label>
-                                <input type="text" style="display: block; width: 100%;" placeholder="Enter Username:" name="uname" required>
+                                <label for="email"><b>Email</b></label>
+                                <input type="text" style="display: block; width: 100%;" placeholder="Enter Email" name="email" required>
             
                                 <label for="psw"><b>Password</b></label>
-                                <input type="password" style="display: block; width: 100%;" placeholder="Enter Password:" name="psw" required>
+                                <input type="password" style="display: block; width: 100%;" placeholder="Enter Password" name="psw" required>
             
                                 <button type="submit" style="margin-top:20px; width: 100%;">Login</button>
 
