--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <title>Review Website - Login</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="/login.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
 <script src=""></script>
 
 <body>
