--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
 <title>Profile</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="/layout.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
 <script src=""></script>
 
 <body>
