Fixes button styling from default properties
*Increased the size of the buttons from login.html, signup.html, and reviews.html
*Added the website's dark gray color to the buttons from login.html, signup.html, and reviews.html

--- a/reviews.html
+++ b/reviews.html
@@ -59,7 +59,7 @@
             <br>
 
             <div class="content">
-                <button>Submit</button>
+                <button class="button-review">Submit</button>
             </div>
         </form>
 
