--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                                 <label for="psw"><b>Password</b></label>
                                 <input type="password" style="display: block; width: 100%;" placeholder="Enter Password" name="psw" required>
             
-                                <button type="submit" style="margin-top:20px; width: 100%;">Login</button>
+                                <button class="button" type="submit" style="margin-top:20px;width:100%;">Login</button>
 
                                 <h5 style="text-align:center;">New user? <a href="/signup.html" style="color:#f8f8f8;">Sign Up</a></h5>
                             </div>
