--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
                                 <option value="drama">Drama</option>
                             </select>
     
-                            <button type="submit" style="margin-top:20px; width: 100%;">Sign Up</button>
+                            <button class="button" type="submit" style="margin-top:20px;width:100%;">Sign Up</button>
     
                             <h5 style="text-align:center;">Already have an account? <a href="/login.html" style="color:#333333;">Login</a></h5>
                         </div>
