Changes the title of the website
*Changed the title of the website from Review Website to Review Media Platform

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <a href="https://www.wallpaperflare.com/search?wallpaper=cinematography" target="_blank"><img src="https://c0.wallpaperflare.com/preview/57/497/73/movie-reel-projector-film.jpg" class="column" style="width:49vw;height:auto;filter:brightness(55%);"></a>
     </div>
 
-    <h1>Review Website</h1>
+    <h1>Review Media Platform</h1>
 
-    <p>Review Website is a versatile platform for users to share reviews and discover new movies and books. Whether you are an avid book reader or a cinema connoisseur, our features include personalized recommendations, thorough review tracking, and a wide selection of books and movies. Explore new content, share your thoughts, and join our Review Website community.</p>
+    <p>Review Media Platform (RMP) is a versatile platform for users to share reviews and discover new movies and books. Whether you are an avid book reader or a cinema connoisseur, our features include personalized recommendations, thorough review tracking, and a wide selection of books and movies. Explore new content, share your thoughts, and join our Review Website community.</p>
     <p>DISCOVER new books and movies</p>
     <p>SHARE your thoughts by writing reviews</p>
     <p>ENJOY great stories</p>
