--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
     <section class="split-section">
         <div class="half left">
             <div class="content">
-                <h1>Review Website</h1>
+                <h1>Review Media Platform</h1>
                 <img src="websiteLogo.png" alt="Review Website Logo" class="logo-image">
             </div>
         </div>
