--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <meta charset="UTF-8">
-<title>Review Website - Sign Up</title>
+<title>Review Media Platform - Sign Up</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="/signup.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
