--- a/explore.html
+++ b/explore.html
@@ -11,7 +11,7 @@
 <body>
 
     <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="/home.html">Home</a></li>
         <li><a class="active" href="javascript:void(0)">Explore</a></li>
         <li><a href="/reviews.html">Write Review</a></li>
         <li style="float:right"><a href="/profile.html">Profile</a></li>
