--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 <body>
 
     <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="/home.html">Home</a></li>
         <li><a href="/explore.html">Explore</a></li>
         <li><a href="/reviews.html">Write Review</a></li>
         <li style="float:right"><a class="active" href="javascript:void(0)">Profile</a></li>
