--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
     
                             <button class="button" type="submit" style="margin-top:20px;width:100%;">Sign Up</button>
     
-                            <h5 style="text-align:center;">Already have an account? <a href="/login.html" style="color:#333333;">Login</a></h5>
+                            <h5 style="text-align:center;">Already have an account? <a href="/index.html" style="color:#333333;">Login</a></h5>
                         </div>
                     </div>
                 </form>
